Fix bug show list button collapse

--- a/src/pages/AdminApp/components/Administrator/components/Additional/View/index.less
+++ b/src/pages/AdminApp/components/Administrator/components/Additional/View/index.less
@@ -124,6 +124,7 @@
   }
 
   .permissionCollapse {
+    width: fit-content;
     .permissionPanel {
       .icon {
         height: fit-content;
