--- a/src/pages/AdminApp/components/Administrator/components/Primary/View/index.less
+++ b/src/pages/AdminApp/components/Administrator/components/Primary/View/index.less
@@ -66,6 +66,7 @@
   }
 
   .permissionCollapse {
+    width: fit-content;
     .permissionPanel {
       .icon {
         height: fit-content;
